# NFLGMSimulator

./: .gitignore  Makefile  README.md
backend/: pyproject.toml  requirements.dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/ingest/: __init__.py  service.py
backend/app/models/: __init__.py  contract.py  player.py  team.py  transaction.py
backend/app/services/: cap.py  draft.py  market.py  season.py  transactions.py
backend/scripts/: build_team_roster.py  convert_contracts_csv.py  fetch_nfl_rosters.py  import_roster.py
backend/tests/: test_ingest_service.py
data/: contracts.csv  contracts_league_2026-02-21.json  free_agents.json  prospects.json
docs/: project-plan.md  transactions.md  vision.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/draft/: page.tsx
frontend/app/gm-basics/: page.tsx
frontend/app/market/: page.tsx
frontend/app/season/: page.tsx
frontend/components/: cap-summary.tsx  player-panel.tsx  roster-insights.tsx  roster-table.tsx  team-picker.tsx  transaction-history.tsx  transaction-panel.tsx
frontend/lib/: api.ts
frontend/styles/: globals.css
infra/: README.md
